# Parth-Agrawal-MANAS-AI-TP-24

./: README.md
CNN_Task_8/: CNN.ipynb
Decision Making/: Decision_Trees-with_Ensemble.ipynb  Decision_Trees.ipynb
Final Task/drone_lawnmower/: package.xml  setup.cfg  setup.py
Final Task/drone_lawnmower/drone_lawnmower/: drone_lawnmower.py
K-Means Clustering/: Clustering.ipynb
Linear_Regression/: multiple_regression.ipynb
Logistic Regression/: logistic_regression.ipynb
Neural_Networks/: Neural_Networks.ipynb
Open CV Task 6/: Vollyball_Task.ipynb
Ros Task 5.0/: CMakeLists.txt
Ros Task 5.0/install/: local_setup.sh  setup.sh
Ros Task 5.0/install/ros2_chat/lib/ros2_chat/: chat_publisher  chat_subscriber
Ros Task 5.0/install/ros2_chat/share/ros2_chat/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
Ros Task 5.0/install/ros2_chat/share/ros2_chat/cmake/: ros2_chatConfig.cmake
Ros Task 5.0/log/: latest_build
Ros Task 5.0/src/: chat_publisher.cpp  chat_subscriber.cpp
Task 7.0/a_star_planner/: CMakeLists.txt  package.xml
Task 7.0/a_star_planner/src/: planner_node.cpp
